<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment1">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/tareas" />

        <Button
            android:id="@+id/btnPendientes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tPendientes" />

        <Button
            android:id="@+id/btnRealizadas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tRealizadas" />

        <Button
            android:id="@+id/btnNueva"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tNueva" />


    </LinearLayout>



</FrameLayout>